fixed the alignment the bio-section text

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -69,12 +69,13 @@ p {
   padding: 20px;
   margin-right: 25px;
   width: 100%;
-  display: inline-block;
 }
 
 .content-info p {
   font-size: 17px;
   line-height: 1.3;
+  height: auto;
+  display: inline-block;
 }
 
 .content img {
